	Fixed bug where the toggle absolute button in the layer plugin wouldn't remove the existing internal style attribute first.
	Fixed bug where the autosave plugin would generate an exception on IE if the user had disabled userdata persistence.
	Fixed issue where &nbsp; wouldn't be handled correctly in the bbcode plugin if entity_encoding was set to raw.
	Fixed bug where WebKit wouldn't create links on images with a float style.
Version 3.3.9.3 (2010-xx-xx)
	Fixed issue where WebKit wouldn't correctly apply ins/del in xhtmlxtras plugin.
	Fixed bug where paste as plaintext on WebKit wouldn't produce br and p elements correctly.
Version 3.3.9.2 (2010-09-29)
	Fixed bug where placing the caret in IE 9 beta 1 would not work correctly if you clicked out side the document body element.
	Fixed bug where IE 9 beta 1 wouldn't resize the editor correctly since the events didn't fire as previous versions did.
	Fixed bug where FF would produce an error message when being rendered inside a hidden div element.
	Fixed bug where resize logic could produce a cookie with a width/height less than the size of the container.
	Fixed bug where content_css wouldn't populate the styles dropdown correctly.
Version 3.3.9.1 (2010-09-23)
	Fixed bug where WebKit browsers wouldn't activate the image button when images where selected.
	Fixed bug where Opera Presto 10.60 deletes elements when restoring bookmarks.
	Fixed bug where IE9 beta1 doesn't handle regexp replacement values correctly.
	Fixed bug where IE9 beta1 didn't render the inline dialogs correctly due to a bug with CSS clip.
	Fixed bug where IE9 beta1 would produce error messages on load since they removed the document.recalc method.
	Fixed bug where IE9 beta1 would produce <html xmlns=""> since they haven't implemented document.implementation.createDocument correctly.
	Fixed bug where IE9 beta1 would searchreplace doesn't work since their native DOM Range doesn't have a find method.