@@ -23,10 +23,10 @@
 			// Register buttons
 			ed.addButton('pagebreak', {title : 'pagebreak.desc', cmd : cls});
 
-			ed.onInit.add(function() {
-				if (ed.settings.content_css !== false)
-					ed.dom.loadCSS(url + "/css/content.css");
+			if (ed.settings.content_css !== false)
+				ed.contentCSS.push(url + "/css/content.css");
 
+			ed.onInit.add(function() {
 				if (ed.theme.onResolveName) {
 					ed.theme.onResolveName.add(function(th, o) {
 						if (o.node.nodeName == 'IMG' && ed.dom.hasClass(o.node, cls))
