@@ -22,6 +22,7 @@ Version 3.4 (2010-xx-xx)
 	Fixed bug where the toggle absolute button in the layer plugin wouldn't remove the existing internal style attribute first.
 	Fixed bug where the autosave plugin would generate an exception on IE if the user had disabled userdata persistence.
 	Fixed issue where &nbsp; wouldn't be handled correctly in the bbcode plugin if entity_encoding was set to raw.
+	Fixed issue where contents would flicker since the content css files where asynchronously loaded.
 	Fixed bug where WebKit wouldn't create links on images with a float style.
 Version 3.3.9.3 (2010-xx-xx)
 	Fixed issue where WebKit wouldn't correctly apply ins/del in xhtmlxtras plugin.
